--- a/CSS/Footer.css
+++ b/CSS/Footer.css
@@ -12,9 +12,12 @@ body {
 /* footer one */
 .footer {
   display: flex;
-  justify-content: center;
+  /* grid-template-columns: repeat(2, 1fr); */
+  /* align-items: center; */
+  /* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
   padding: 30px 0;
-  background-color: #1e1e1e;
+  background-color: #000;
+  width: 100%;
   color: #fff;
   line-height: 1.5;
   box-sizing: border-box;
@@ -27,7 +30,10 @@ ul {
   box-sizing: border-box;
   width: 265px;
   height: auto;
-  margin-right:30px;
+  /* margin-right: 30px; */
+  margin-left: 100px;
+  margin-top: 50px;
+  display: inline;
 }
 .columne-logo img {
   width: 265px;
@@ -38,29 +44,44 @@ ul {
   text-align: justify;
   font-size: 14px;
 }
+/* .list-columne{
+  
+} */
 
 .footer-columne {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-around;
+  margin: 20px;
+  width: 100%;
+  gap: 10px;
+  padding: 20px;
+}
+.columne {
+  width: 250px;
 }
 ul.columne li a {
   text-decoration: none;
   color: #fff;
   right: 0;
 }
-.columne li{
+.columne li {
   line-height: 2;
   font-size: 13px;
 }
-.columne li:hover{
+.columne li:hover {
   text-decoration: underline;
 }
+
+.footer-title {
+  margin: 20px 0;
+}
+.ship li {
+  margin: 10px 0;
+}
 .ship a img {
-  width: 300px;
+  width: 100px;
   height: auto;
-  /* position: absolute; */
-  right: -20px;
-  top: -20px;
 }
 .icon-info {
   margin-top: 30px;
@@ -68,24 +89,24 @@ ul.columne li a {
   display: flex;
   gap: 20px;
 }
-.icon-info a{
+.icon-info a {
   color: #fff;
 }
-.appstore{
+.appstore {
   margin-top: 20px;
   padding: 0;
   display: flex;
   gap: 20px;
 }
-.appstore li a img{
-   width: 100px;
-   height: auto;
+.appstore li a img {
+  width: 100px;
+  height: auto;
 }
 
-
 /* footer tow */
-.footer-foot{
-  display: flex;
+.footer-foot {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
   justify-content: center;
   padding: 20px 0;
   background-color: #1e1e1e;
@@ -94,7 +115,62 @@ ul.columne li a {
   box-sizing: border-box;
   box-shadow: 0 -0.2px 0px 0 rgb(232, 232, 232);
 }
-.footer-foot-clo{
+.footer-foot-clo {
   margin: 0 100px;
   font-size: 13px;
 }
+.card {
+  background: none;
+  border: none;
+}
+
+.bg-card {
+  grid-gap: 12px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 0;
+  width: 70%;
+}
+.bg-card li a img {
+  align-items: center;
+  background: #fff;
+  border-radius: 4px;
+  justify-content: center;
+  overflow: hidden;
+  padding: 4px 8px;
+}
+.footer-mini-block__payment-item-img {
+  height: 30px;
+  max-width: 100%;
+  object-fit: contain;
+}
+
+.certify li {
+  margin: 10px 0;
+}
+.footer-mini-block__certify-item-img {
+  height: auto;
+  width: 125px;
+}
+
+.bar-icon-top a i{
+  display: grid;
+  place-items: center;
+  margin-top: 12px;
+  font-size: 30px;
+  color: #1e1e1e;
+}
+.bar-icon-top a{
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  background: #fff;
+  border-radius: 100rem;
+  box-shadow: 0 0 10px 8px rgba(0, 0, 0, 0.25);
+  z-index: 79;
+  right: 0;bottom: 0;
+  margin-bottom: 200px;
+  margin-right: 50px;
+  text-decoration: none;
+}
+
