--- a/CSS/NavLogo.css
+++ b/CSS/NavLogo.css
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 body {
-  margin: 0px 100px;
-  padding: 30px;
   box-sizing: border-box;
+}
+.line-short {
+  width: 100%;
+  height: auto;
+  background: #000;
+  color: #e5e5e5;
+  text-align: center;padding: 10px;font-weight: 600;font-size: 16px;
 }
 .logo {
   width: 200px;
@@ -11,7 +16,7 @@ body {
 .Form-nav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   list-style-type: none;
   font-family: "Roboto", sans-serif;
 }
@@ -26,25 +31,34 @@ body {
   text-transform: capitalize;
   font-weight: 500;
   font-style: normal;
-  margin: 10px 0;
 }
 .title-search li {
-  margin: 0 10px;
+  text-align: center;
+  padding: 10px;
   cursor: pointer;
+  min-width: 80px;
+  transition: 0.33s ease;
 }
 .title-search li:hover {
-  background-color: darkgrey;
+  background-color: #000;
+  color: #e5e5e5;
   padding: 10px;
-  border-radius: 10px;
+border-bottom-left-radius: 10px;
+border-bottom-right-radius: 10px;
+
 }
 .taskbar-search {
   display: flex;
   align-items: center;
-  background-color: darkgrey;
-  height: 50px;
-  border-radius: 10px;
+  /* background-color: #e5e5e5; */
+  height: 70px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   width: 600px;
   position: relative;
+}
+.Search .title-search li:hover ~ .taskbar-search {
+  border-top-left-radius: 10px;
 }
 .input {
   width: 95%;
@@ -83,4 +97,13 @@ input:focus {
 .bag a {
   color: black;
   text-decoration: none;
+}
+
+.signup button{
+  border: none;
+  padding: 8px 15px;
+  border-radius: 10px;
+  background-color: #000;
+  color: #e5e5e5;
+  margin: 10px;
 }
